# rpg-backend

./: .env.example  .gitignore  main.py  pom.xml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: deploy.yml
app/: config.py  database.py  storage.py
app/articles/: exceptions.py  model.py  relationships.py  router.py  schemas.py  service.py
app/categories/: model.py  relationships.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  health.py  storage.py
src/main/java/agh/edu/rpg/: RpgApplication.java
src/main/java/agh/edu/rpg/config/: CorsConfig.java  Neo4jReactiveConfig.java  SecurityConfig.java
src/main/java/agh/edu/rpg/controllers/: ArticleController.java
src/main/java/agh/edu/rpg/database/entities/: ArticleEntity.java  CategoryEntity.java
src/main/java/agh/edu/rpg/database/relationships/: References.java
src/main/java/agh/edu/rpg/dto/: ArticleDto.java  ArticleSummaryDto.java  ArticleWriteDto.java
src/main/java/agh/edu/rpg/repositories/: ArticleRepository.java  CategoryRepository.java
src/main/java/agh/edu/rpg/services/: ArticleService.java  CategoryService.java
src/test/java/agh/edu/rpg/: RpgApplicationTests.java
